SDKs/twilio.com/twilio_oauth_v1/1.39.1/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get github.com/speakeasy-api/openapi-directory/SDKs/twilio.com/twilio_oauth_v1/1.39.1/go
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "context"
    "log"
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()

    req := operations.CreateDeviceCodeRequest{
        Security: operations.CreateDeviceCodeSecurity{
            AccountSidAuthToken: shared.SchemeAccountSidAuthToken{
                Password: "YOUR_PASSWORD_HERE",
                Username: "YOUR_USERNAME_HERE",
            },
        },
        Request: &operations.CreateDeviceCodeCreateDeviceCodeRequest{
            Audiences: []string{
                "deserunt",
                "porro",
                "nulla",
            },
            ClientSid: "id",
            Scopes: []string{
                "perspiciatis",
                "nulla",
                "nihil",
                "fuga",
            },
        },
    }

    ctx := context.Background()
    res, err := s.CreateDeviceCode(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.OauthV1DeviceCode != nil {
        // handle response
    }
}
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `CreateDeviceCode` - Issues a new Access token (optionally identity_token & refresh_token) in exchange of Oauth grant
* `CreateToken` - Issues a new Access token (optionally identity_token & refresh_token) in exchange of Oauth grant
* `FetchCerts` - Fetches public JWKs
* `FetchOpenidDiscovery` - Fetch configuration details about the OpenID Connect Authorization Server
* `FetchUserInfo` - Retrieves the consented UserInfo and other claims about the logged-in subject (end-user).
<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
